# kde-task-manager

./: CMakeLists.txt  README.md  build-and-install.sh  clean.sh  debug-log.txt  fullheight-launchers.patch
qml/: Task.qml  TaskList.qml  main.qml
